# scionic

./: .gitignore  README.md  palindrome_checker.py  pyproject.toml
examples/: code_review.py  research_pipeline.py  task_manager.py
scion_graph/: __init__.py  conductor.py  forwarder.py  irq_bus.py  node.py  path_selector.py  registry.py  types.py
scion_graph/adapters/: __init__.py  hermes.py  llm.py
scionic/: __init__.py  conductor.py  flow.py  forwarder.py  irq_bus.py  node.py  peer.py  smart_conductor.py  transport.py  triage_router.py  types.py
scionic/adapters/: __init__.py  hermes.py  llm.py
tests/: eval.py  test_integration.py  test_task_manager.py
