[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scionic"
version = "0.1.0"
description = "Path-aware graph execution middleware. SCION-inspired routing for agent orchestration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["httpx>=0.27"]
hermes = []
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["scionic*"]
