[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scionic"
version = "0.2.0"
description = "SCION-inspired path-aware graph execution middleware for agent orchestration."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["httpx>=0.27"]
hermes = []
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["scionic*"]
